--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <br>I am from Kannur,Kerala,India.
           </p>
           <div class="buttons">
-            <a href="./resume.pdf" class="primary-btn" download="">Download Resume</a>
+            <a href="./resume.pdf" class="primary-btn" download="">;)</a>
             <a href="mailto:ag3n7@duck.com" class="primary-btn outline">Get in touch</a>
           </div>
         </div>
