--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </h2>
         <p class="desc">
         <a class="link1" href="https://github.com/ag3n7" data-toggle="tooltip" data-placement="top" title="Github"><i class="fa-brands fa-github" style="font-size:36px"></i></a>
-        <a class="link1" href="https://www.hackthebox.eu/profile/407295" data-toggle="tooltip" data-placement="bottom" title="Hackthebox"><img src="./images/hackthebox.svg" style="width:45px;height:30px;" alt="" /></a>       
+        <a class="link1" href="https://app.hackthebox.com/profile/407295" data-toggle="tooltip" data-placement="bottom" title="Hackthebox"><img src="./images/hackthebox.svg" style="width:45px;height:30px;" alt="" /></a>       
         <a class="link1" href="https://twitter.com/ag3n7apk" data-toggle="tooltip" data-placement="bottom" title="Twitter"><i class="fa-brands fa-twitter" style="font-size:36px"></i></a>
         <a class="link1" href="https://tryhackme.com/p/ag3n7" data-toggle="tooltip" data-placement="bottom" title="Tryhackme"><img src="./images/THMlogo.png" style="width:45px;height:30px;" alt="" /></a>
         <a class="link1" href="https://www.linkedin.com/in/abhijith-pk-ag3n7/" data-toggle="tooltip" data-placement="bottom" title="LinkedIn"><i class="fa-brands fa-linkedin" style="font-size:36px"></i>
